--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./pages/index.css">
     <title>Document</title>
 </head>
-<body>
-    <h1>Ремонт пленочных фотоаппаратов</h1>
+<body class="body">
+    <div class="page">
+        <h1>Ремонт пленочных фотоаппаратов</h1>
+    </div>
 </body>
 </html>
