Сделал шапку и подключил .gitignore

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 <body class="body">
     <div class="page">
-        <h1>Ремонт пленочных фотоаппаратов</h1>
+        <header class="header">
+            <p class="logo">C-Works<span class="logo__notice">Мы открылись</span></p>
+            <h1 class="header__title">Ремонт</h1>
+            <p class="header__subtitle">Плёночных фотоаппаратов</p>
+        </header>
+        <main class="main">
+            Основной контент
+        </main>
+        <footer class="footer">
+            Подвал сайта
+        </footer>
     </div>
 </body>
 </html>
