--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css">
-    <title>Document</title>
+    <title>Ремонт плёночных фотоаппаратов</title>
 </head>
 <body class="body">
     <div class="page">
@@ -21,5 +21,6 @@
             Подвал сайта
         </footer>
     </div>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
