Добавил секцию с формой в main и миксины

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             <p class="header__subtitle">Плёночных фотоаппаратов</p>
         </header>
         <main class="main">
-            Основной контент
+            <section class="repair-request">
+                <form class="form">
+                    <input class="form__input" type="email">
+                    <button class="form__button" type="submit">Отремонтируйте камеру ✌️</button>
+                </form>
+            </section>
         </main>
         <footer class="footer">
             Подвал сайта
