--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         <main class="main">
             <section class="repair-request">
                 <form class="form">
-                    <input class="form__input" type="email">
-                    <button class="form__button" type="submit">Отремонтируйте камеру ✌️</button>
+                        <input class="form__input" type="email" name="repair-request-form">
+                        <button class="form__button" type="submit">Отремонтируйте камеру ✌️</button>
+                        <label class="form__label" for="repair-request-form">Напишите нам и мы свяжемся с вами.</label>
                 </form>
+                <!-- <p class="form__text">Напишите нам и мы свяжемся с вами.</p> -->
             </section>
+            <section class="gallery">Галлерея</section>
         </main>
         <footer class="footer">
             Подвал сайта
