Добавил секцию с галлереей

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
                         <label class="form__label" for="repair-request-form">Напишите нам и мы свяжемся с вами.</label>
                 </form>
             </section>
-            <section class="gallery">Галлерея</section>
+            <section class="gallery">
+                <img class="gallery__img-1" src="./images/img-1.jpg" alt="Бренд фотоаппарата">
+                <div class="gallery__block-1"></div>
+                <div class="gallery__block-2"></div>
+                <img class="gallery__img-2" src="./images/img-2.jpg" alt="Фотоаппарат Leica">
+            </section>
         </main>
         <footer class="footer">
             Подвал сайта
