Добавлена секция с описанием услуг

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <div class="gallery__block-2"></div>
                 <img class="gallery__img-2" src="./images/img-2.jpg" alt="Фотоаппарат Leica">
             </section>
+            <section class="description">
+                <p class="description__text">
+                    Мы ремонтируем плёночные фотоаппараты. Полносстью механические камеры, относительно современные камеры на электронике, проводим CLA камер, принимаем в зачёт оплаты сломаные тушки и объективы.
+                </p>
+            </section>
         </main>
         <footer class="footer">
             Подвал сайта
