--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
                     Мы ремонтируем плёночные фотоаппараты. Полносстью механические камеры, относительно современные камеры на электронике, проводим CLA камер, принимаем в зачёт оплаты сломаные тушки и объективы.
                 </p>
             </section>
+            <section class="services">
+                <h2 class="services__title">
+                    Для энтузиастов, от энтузиастов 👈
+                </h2>
+                <div class="services__cards">
+                    <div class="services__card">
+                        <p class="services__label">CLA</p>
+                        <h3 class="services__heading">Чистка камер.</h3>
+                        <p class="services__text">Замена уплотнителей, дампфера зеркала, смазка механизмов, юстировка.</p>
+                        <p class="services__price">от 2000₽</p>
+                    </div>
+                    <div class="services__card">
+                        <p class="services__label">Ремонт</p>
+                        <h3 class="services__heading">Ремонт камер.</h3>
+                        <p class="services__text">Ремонт механизмов, замена деталей, пайка электроники, адаптация питания.</p>
+                        <p class="services__price">от 2500₽</p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             Подвал сайта
