Добавлена секция с гарантией

--- a/index.html
+++ b/index.html
@@ -52,6 +52,29 @@
                     </div>
                 </div>
             </section>
+            <section class="guarantee">
+                <h2 class="guarantee__title">
+                    Полная гарантия ⚡️
+                </h2>
+                <div class="guarantee__cards">
+                    <div class="guarantee__card">
+                        <h3 class="guarantee__heading">CLA</h3>
+                        <p class="guarantee__text">После CLA мы даем гарантию на 1 год, в случае беды мы заново обслужим вашу камеру.</p>
+                    </div>
+                    <div class="guarantee__card">
+                        <h3 class="guarantee__heading">Ремонт</h3>
+                        <p class="guarantee__text">После ремонта мы даем гарантию на 3 месяца или 6 месяцев.</p>
+                    </div>
+                    <div class="guarantee__card">
+                        <h3 class="guarantee__heading">Пайка и адаптация</h3>
+                        <p class="guarantee__text">После пайки и адаптации питания мы даем гарантию на 1 год.</p>
+                    </div>
+                    <div class="guarantee__card">
+                        <h3 class="guarantee__heading">Осмотр</h3>
+                        <p class="guarantee__text">Осмотр камеры — бесплатен, если мы что-то сломаем, поменяем деталь сами.</p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             Подвал сайта
