Desktop версия первая

--- a/index.html
+++ b/index.html
@@ -75,9 +75,22 @@
                     </div>
                 </div>
             </section>
+            <section class="support">
+                <h2 class="support__title">
+                    Поддержите нас 🤝
+                </h2>
+                <button class="support__button">Напишите нам если хотите помочь!</button>
+                <p class="support__text">Ещё вы сможете безвозмездно поддержать нас на Patreon, пока мы ещё создали аккаунт, но как только это сделаем, сообщим вам.</p>
+            </section>
         </main>
         <footer class="footer">
-            Подвал сайта
+            <p class="logo logo_footer">C-Works<span class="logo__notice">Мы открылись</span></p>
+            <form class="form">
+                <input class="form__input" type="email" name="repair-request-form">
+                <button class="form__button" type="submit">Отремонтируйте камеру ✌️</button>
+                <label class="form__label form__label_footer" for="repair-request-form">Напишите нам и мы свяжемся с вами.</label>
+            </form>
+            <p class="footer__copyright">© C-Works, 2021.</p>
         </footer>
     </div>
     <script src="./scripts/index.js"></script>
