Адаптировал под 768px и частично под 320 px

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <main class="main">
             <section class="repair-request">
                 <form class="form">
-                        <input class="form__input" type="email" name="repair-request-form">
-                        <button class="form__button" type="submit">Отремонтируйте камеру ✌️</button>
+                        <input class="form__input form__input_fluid" type="email" name="repair-request-form">
+                        <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span>✌️</button>
                         <label class="form__label" for="repair-request-form">Напишите нам и мы свяжемся с вами.</label>
                 </form>
             </section>
