--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <section class="repair-request">
                 <form class="form">
                         <input class="form__input form__input_fluid" type="email" name="repair-request-form">
-                        <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span>✌️</button>
+                        <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
                         <label class="form__label" for="repair-request-form">Напишите нам и мы свяжемся с вами.</label>
                 </form>
             </section>
@@ -30,7 +30,7 @@
             </section>
             <section class="description">
                 <p class="description__text">
-                    Мы ремонтируем плёночные фотоаппараты. Полносстью механические камеры, относительно современные камеры на электронике, проводим CLA камер, принимаем в зачёт оплаты сломаные тушки и объективы.
+                    Мы ремонтируем плёночные фотоаппараты. Полносстью механические камеры, относительно современные камеры на&nbsp;электронике, проводим CLA камер, принимаем в зачёт оплаты сломаные тушки и объективы.
                 </p>
             </section>
             <section class="services">
@@ -87,7 +87,7 @@
             <p class="logo logo_footer">C-Works<span class="logo__notice">Мы открылись</span></p>
             <form class="form">
                 <input class="form__input" type="email" name="repair-request-form">
-                <button class="form__button" type="submit">Отремонтируйте камеру ✌️</button>
+                <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
                 <label class="form__label form__label_footer" for="repair-request-form">Напишите нам и мы свяжемся с вами.</label>
             </form>
             <p class="footer__copyright">© C-Works, 2021.</p>
