Добавлен скрипт для форм

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </header>
         <main class="main">
             <section class="repair-request">
-                <form class="form">
-                        <input class="form__input form__input_fluid" type="email" name="repair-request-form">
+                <form class="form" id="repair-request-form">
+                        <input class="form__input form__input_fluid" type="email" name="repair-request-input">
                         <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
-                        <label class="form__label" for="repair-request-form">Напишите нам и мы свяжемся с вами.</label>
+                        <label class="form__label" for="repair-request-input">Напишите нам и мы свяжемся с вами.</label>
                 </form>
             </section>
             <section class="gallery">
@@ -85,10 +85,10 @@
         </main>
         <footer class="footer">
             <p class="logo logo_footer">C-Works<span class="logo__notice">Мы открылись</span></p>
-            <form class="form">
-                <input class="form__input" type="email" name="repair-request-form">
+            <form class="form" id="footer-form">
+                <input class="form__input" type="email" name="footer-input">
                 <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
-                <label class="form__label form__label_footer" for="repair-request-form">Напишите нам и мы свяжемся с вами.</label>
+                <label class="form__label form__label_footer" for="footer-input">Напишите нам и мы свяжемся с вами.</label>
             </form>
             <p class="footer__copyright">© C-Works, 2021.</p>
         </footer>
