--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
             <p class="header__subtitle">Плёночных фотоаппаратов</p>
         </header>
         <main class="main">
-            <section class="repair-request">
+            <section class="repair-request" aria-label="Основная форма заявки на ремонт">
                 <form class="form" id="repair-request-form">
-                        <input class="form__input form__input_fluid" type="email" name="repair-request-input">
+                        <input class="form__input form__input_fluid" type="email" id="repair-request-input">
                         <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
                         <label class="form__label" for="repair-request-input">Напишите нам и мы свяжемся с вами.</label>
                 </form>
             </section>
-            <section class="gallery">
+            <section class="gallery" aria-label="Галлерея">
                 <img class="gallery__img-1" src="./images/img-1.jpg" alt="Бренд фотоаппарата">
                 <div class="gallery__block-1"></div>
                 <div class="gallery__block-2"></div>
                 <img class="gallery__img-2" src="./images/img-2.jpg" alt="Фотоаппарат Leica">
             </section>
-            <section class="description">
+            <section class="description" aria-label="О нас">
                 <p class="description__text">
                     Мы ремонтируем плёночные фотоаппараты. Полносстью механические камеры, относительно современные камеры на&nbsp;электронике, проводим CLA камер, принимаем в зачёт оплаты сломаные тушки и объективы.
                 </p>
@@ -86,7 +86,7 @@
         <footer class="footer">
             <p class="logo logo_footer">C-Works<span class="logo__notice">Мы открылись</span></p>
             <form class="form" id="footer-form">
-                <input class="form__input" type="email" name="footer-input">
+                <input class="form__input" type="email" id="footer-input">
                 <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
                 <label class="form__label form__label_footer" for="footer-input">Напишите нам и мы свяжемся с вами.</label>
             </form>
