Перенес заголовок H1 из header в main

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="page">
         <header class="header">
             <p class="logo">C-Works<span class="logo__notice">Мы открылись</span></p>
-            <h1 class="header__title">Ремонт</h1>
-            <p class="header__subtitle">Плёночных фотоаппаратов</p>
         </header>
         <main class="main">
+            <h1 class="main__title">Ремонт</h1>
+            <p class="main__subtitle">Плёночных фотоаппаратов</p>
             <section class="repair-request" aria-label="Основная форма заявки на ремонт">
                 <form class="form" id="repair-request-form">
                         <input class="form__input form__input_fluid" type="email" id="repair-request-input">
