Добавил name для форм и type для кнопки

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 class="main__title">Ремонт</h1>
             <p class="main__subtitle">Плёночных фотоаппаратов</p>
             <section class="repair-request" aria-label="Основная форма заявки на ремонт">
-                <form class="form" id="repair-request-form">
+                <form class="form" id="repair-request-form" name="repair-request-form">
                         <input class="form__input form__input_fluid" type="email" id="repair-request-input">
                         <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
                         <label class="form__label" for="repair-request-input">Напишите нам и мы свяжемся с вами.</label>
@@ -79,13 +79,13 @@
                 <h2 class="support__title">
                     Поддержите нас 🤝
                 </h2>
-                <button class="support__button">Напишите нам если хотите помочь!</button>
+                <button class="support__button" type="button">Напишите нам если хотите помочь!</button>
                 <p class="support__text">Ещё вы сможете безвозмездно поддержать нас на Patreon, пока мы ещё создали аккаунт, но как только это сделаем, сообщим вам.</p>
             </section>
         </main>
         <footer class="footer">
             <p class="logo logo_footer">C-Works<span class="logo__notice">Мы открылись</span></p>
-            <form class="form" id="footer-form">
+            <form class="form" id="footer-form" name="footer-form">
                 <input class="form__input" type="email" id="footer-input">
                 <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
                 <label class="form__label form__label_footer" for="footer-input">Напишите нам и мы свяжемся с вами.</label>
