Исправил название модификаторов

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <p class="logo">C-Works<span class="logo__notice">Мы открылись</span></p>
+            <p class="logo">C-Works<span class="logo__notice">мы открылись</span></p>
         </header>
         <main class="main">
             <h1 class="main__title">Ремонт</h1>
@@ -84,11 +84,11 @@
             </section>
         </main>
         <footer class="footer">
-            <p class="logo logo_footer">C-Works<span class="logo__notice">Мы открылись</span></p>
+            <p class="logo logo_place_footer">C-Works<span class="logo__notice">мы открылись</span></p>
             <form class="form" id="footer-form" name="footer-form">
                 <input class="form__input" type="email" id="footer-input">
                 <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
-                <label class="form__label form__label_footer" for="footer-input">Напишите нам и мы свяжемся с вами.</label>
+                <label class="form__label form__label_place_footer" for="footer-input">Напишите нам и мы свяжемся с вами.</label>
             </form>
             <p class="footer__copyright">© C-Works, 2021.</p>
         </footer>
