Исправил классы gallery и добавил модификаторы

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 </form>
             </section>
             <section class="gallery" aria-label="Галлерея">
-                <img class="gallery__img-first" src="./images/img-1.jpg" alt="Бренд фотоаппарата">
-                <div class="gallery__block-first"></div>
-                <div class="gallery__block-last"></div>
-                <img class="gallery__img-last" src="./images/img-2.jpg" alt="Фотоаппарат Leica">
+                <img class="gallery__img gallery__img_position_first" src="./images/img-1.jpg" alt="Бренд фотоаппарата">
+                <div class="gallery__block gallery__block_position_first"></div>
+                <div class="gallery__block gallery__block_position_last"></div>
+                <img class="gallery__img gallery__img_position_last" src="./images/img-2.jpg" alt="Фотоаппарат Leica">
             </section>
             <section class="description" aria-label="О нас">
                 <p class="description__text">
