--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css">
-    <title>Ремонт плёночных фотоаппаратов</title>
+    <link type="Image/x-icon" href="/images//favicon.ico" rel="icon">
+    <title>Film cameras repair</title>
 </head>
+
 <body class="body">
     <div class="page">
         <header class="header">
-            <p class="logo">C-Works<span class="logo__notice">мы открылись</span></p>
+            <p class="logo">C-Works<span class="logo__notice">We are opened</span></p>
         </header>
         <main class="main">
-            <h1 class="main__title">Ремонт</h1>
-            <p class="main__subtitle">Плёночных фотоаппаратов</p>
+            <h1 class="main__title">Film cameras</h1>
+            <p class="main__subtitle">REPAIR</p>
             <section class="repair-request" aria-label="Основная форма заявки на ремонт">
                 <form class="form" id="repair-request-form" name="repair-request-form">
-                        <input class="form__input form__input_fluid" type="email" id="repair-request-input">
-                        <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
-                        <label class="form__label" for="repair-request-input">Напишите нам и мы свяжемся с вами.</label>
+                    <input class="form__input form__input_fluid" type="email" id="repair-request-input">
+                    <button class="form__button" type="submit"><span class="form__button-text">Repair your camera</span>
+                        ✌️</button>
+                    <label class="form__label" for="repair-request-input">Contact us and we will get in touch with
+                        you.</label>
                 </form>
             </section>
             <section class="gallery" aria-label="Галлерея">
@@ -30,69 +35,83 @@
             </section>
             <section class="description" aria-label="О нас">
                 <p class="description__text">
-                    Мы ремонтируем плёночные фотоаппараты. Полносстью механические камеры, относительно современные камеры на&nbsp;электронике, проводим CLA камер, принимаем в зачёт оплаты сломаные тушки и объективы.
+                    We&nbsp;repair film cameras, including fully mechanical cameras, relatively modern cameras with
+                    electronics, and perform CLA on&nbsp;cameras. We&nbsp;also accept broken camera bodies and lenses
+                    as&nbsp;trade-ins.
                 </p>
             </section>
             <section class="services">
                 <h2 class="services__title">
-                    Для энтузиастов, от энтузиастов 👈
+                    For enthusiasts, by enthusiasts 👈
                 </h2>
                 <div class="services__cards">
                     <div class="services__card">
                         <p class="services__label">CLA</p>
-                        <h3 class="services__heading">Чистка камер.</h3>
-                        <p class="services__text">Замена уплотнителей, дампфера зеркала, смазка механизмов, юстировка.</p>
-                        <p class="services__price">от 2000₽</p>
+                        <h3 class="services__heading">Camera cleaning.</h3>
+                        <p class="services__text">Replacement of&nbsp;seals, mirror dampers, lubrication
+                            of&nbsp;mechanisms, and adjustment.
+                        </p>
+                        <p class="services__price">from 50$</p>
                     </div>
                     <div class="services__card">
-                        <p class="services__label">Ремонт</p>
-                        <h3 class="services__heading">Ремонт камер.</h3>
-                        <p class="services__text">Ремонт механизмов, замена деталей, пайка электроники, адаптация питания.</p>
-                        <p class="services__price">от 2500₽</p>
+                        <p class="services__label">Repair</p>
+                        <h3 class="services__heading">Camera repair.</h3>
+                        <p class="services__text">Repair of&nbsp;mechanisms, replacement of&nbsp;parts, electronic
+                            soldering, power adaptation.</p>
+                        <p class="services__price">from 200$</p>
                     </div>
                 </div>
             </section>
             <section class="guarantee">
                 <h2 class="guarantee__title">
-                    Полная гарантия ⚡️
+                    Full warranty ⚡️
                 </h2>
                 <div class="guarantee__cards">
                     <div class="guarantee__card">
                         <h3 class="guarantee__heading">CLA</h3>
-                        <p class="guarantee__text">После CLA мы даем гарантию на 1 год, в случае беды мы заново обслужим вашу камеру.</p>
+                        <p class="guarantee__text">After CLA, we&nbsp;provide a&nbsp;1-year warranty and will service
+                            your camera again in&nbsp;case of&nbsp;any issues.</p>
                     </div>
                     <div class="guarantee__card">
-                        <h3 class="guarantee__heading">Ремонт</h3>
-                        <p class="guarantee__text">После ремонта мы даем гарантию на 3 месяца или 6 месяцев.</p>
+                        <h3 class="guarantee__heading">Repair</h3>
+                        <p class="guarantee__text">After repair, we&nbsp;provide a&nbsp;3-month or&nbsp;6-month
+                            warranty.</p>
                     </div>
                     <div class="guarantee__card">
-                        <h3 class="guarantee__heading">Пайка и адаптация</h3>
-                        <p class="guarantee__text">После пайки и адаптации питания мы даем гарантию на 1 год.</p>
+                        <h3 class="guarantee__heading">Soldering and adaptation</h3>
+                        <p class="guarantee__text">After soldering and power adaptation, we&nbsp;provide a&nbsp;1-year
+                            warranty.</p>
                     </div>
                     <div class="guarantee__card">
-                        <h3 class="guarantee__heading">Осмотр</h3>
-                        <p class="guarantee__text">Осмотр камеры — бесплатен, если мы что-то сломаем, поменяем деталь сами.</p>
+                        <h3 class="guarantee__heading">Inspection</h3>
+                        <p class="guarantee__text">Camera inspection is&nbsp;free, and if&nbsp;we&nbsp;accidentally
+                            break something, we&nbsp;will replace the part ourselves.</p>
                     </div>
                 </div>
             </section>
             <section class="support">
                 <h2 class="support__title">
-                    Поддержите нас 🤝
+                    Support us 🤝
                 </h2>
-                <button class="support__button" type="button">Напишите нам если хотите помочь!</button>
-                <p class="support__text">Ещё вы сможете безвозмездно поддержать нас на Patreon, пока мы ещё создали аккаунт, но как только это сделаем, сообщим вам.</p>
+                <button class="support__button" type="button">Contact us if you want to help!</button>
+                <p class="support__text">You can also support&nbsp;us for free on&nbsp;Patreon while
+                    we&nbsp;haven&rsquo;t created an&nbsp;account yet, but once we&nbsp;do, we&nbsp;will let you know.
+                </p>
             </section>
         </main>
         <footer class="footer">
-            <p class="logo logo_place_footer">C-Works<span class="logo__notice">мы открылись</span></p>
+            <p class="logo logo_place_footer">C-Works<span class="logo__notice">We are opened</span></p>
             <form class="form" id="footer-form" name="footer-form">
                 <input class="form__input" type="email" id="footer-input">
-                <button class="form__button" type="submit"><span class="form__button-text">Отремонтируйте камеру</span> ✌️</button>
-                <label class="form__label form__label_place_footer" for="footer-input">Напишите нам и мы свяжемся с вами.</label>
+                <button class="form__button" type="submit"><span class="form__button-text">Repair your camera</span>
+                    ✌️</button>
+                <label class="form__label form__label_place_footer" for="footer-input">Contact us and we will get in
+                    touch with you.</label>
             </form>
             <p class="footer__copyright">© C-Works, 2021.</p>
         </footer>
     </div>
     <script src="./scripts/index.js"></script>
 </body>
+
 </html>
